SERVER-35290 dropDatabase command should respect maxTimeMS